Make submit button a square

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </script>
         </fieldset>
         <br />
-        <input type="submit" class="submit_image" value="submit" src="Images/Pizza.png" alt="submit Button" />
+        <button type="submit" style="background-image: url(Images/Pizza.png); width: 50px; height: 50px;">
     </form>
 </body>
 
