--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
             </script>
         </fieldset>
         <br />
-        <button type="submit" style="background-image: url(Images/Pizza.png); width: 50px; height: 50px;">
+        <div>
+            <input type="image" value="submit" src="Images/Pizza.png" style="text-align: center" />
+        </div>
     </form>
 </body>
 
